--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ assert_matches = "1.5.0"
 async-fd-lock = "0.2.0"
 async-once-cell = "0.5.4"
 async-trait = "0.1.86"
+axum = "0.7"
 barrier_cell = { path = "crates/barrier_cell" }
 base64 = "0.22.1"
 bytes = "1.10.0"
@@ -108,6 +109,7 @@ pixi_stable_hash = { path = "crates/pixi_stable_hash" }
 pixi_task = { path = "crates/pixi_task" }
 pixi_test_utils = { path = "crates/pixi_test_utils" }
 pixi_toml = { path = "crates/pixi_toml" }
+pixi_url = { path = "crates/pixi_url" }
 pixi_utils = { path = "crates/pixi_utils", default-features = false }
 pixi_uv_context = { path = "crates/pixi_uv_context" }
 pixi_uv_conversions = { path = "crates/pixi_uv_conversions" }
@@ -137,6 +139,7 @@ regex = "1.11.1"
 reqwest = { version = "0.12.12", default-features = false }
 # reqwest-middleware = "0.4"
 # reqwest-retry = "0.7.0"
+bzip2 = "0.6.1"
 reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "7650ed76215a962a96d94a79be71c27bffde7ab2" }
 reqwest-retry = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "7650ed76215a962a96d94a79be71c27bffde7ab2" }
 rlimit = "0.10.2"
@@ -151,6 +154,7 @@ serde_ignored = "0.1.10"
 serde_json = "1.0.139"
 serde_with = "=3.14.0"
 serde_yaml = "0.9.34"
+sevenz-rust2 = "0.19.3"
 sha1 = "0.10.6"
 sha2 = "0.10.8"
 shlex = "1.3.0"
@@ -172,6 +176,7 @@ tokio-util = "0.7.13"
 toml-span = "0.5.2"
 toml_edit = "0.22.24"
 tracing = "0.1.41"
+xz2 = "0.1.7"
 # Forcing the version due to this PR https://github.com/tokio-rs/tracing/pull/3368
 tracing-subscriber = "=0.3.19"
 typed-path = "0.11.0"
