--- a/Cargo.toml
+++ b/Cargo.toml
@@ -124,7 +124,7 @@ rattler_conda_types = { version = "0.40.4", default-features = false, features =
 ] }
 rattler_digest = { version = "1.1.7", default-features = false }
 rattler_lock = { version = "0.26.1", default-features = false }
-rattler_menuinst = { version = "0.2.23", default-features = false }
+rattler_menuinst = { version = "0.2.34", default-features = false }
 rattler_networking = { version = "0.25.21", default-features = false, features = [
   "dirs",
   "google-cloud-auth",
@@ -221,6 +221,24 @@ reqwest-middleware = { git = "https://github.com/astral-sh/reqwest-middleware", 
 reqwest-retry = { git = "https://github.com/astral-sh/reqwest-middleware", rev = "7650ed76215a962a96d94a79be71c27bffde7ab2" }
 version-ranges = { git = "https://github.com/astral-sh/pubgrub", rev = "d8efd77673c9a90792da9da31b6c0da7ea8a324b" }
 
+# pixi-rattler-patches - START
+# pixi-rattler-original-versions: {"coalesced_map": "0.1.2", "file_url": "0.2.6", "rattler": "0.38.4", "rattler_cache": "0.4.1", "rattler_conda_types": "0.40.4", "rattler_digest": "1.1.7", "rattler_lock": "0.26.1", "rattler_menuinst": "0.2.23", "rattler_networking": "0.25.21", "rattler_package_streaming": "0.23.13", "rattler_repodata_gateway": "0.24.14", "rattler_shell": "0.25.7", "rattler_solve": "3.0.9", "rattler_virtual_packages": "2.2.5", "simple_spawn_blocking": "1.1.0"}
+coalesced_map = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+file_url = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_cache = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_conda_types = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_digest = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_lock = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_menuinst = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_networking = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_package_streaming = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_repodata_gateway = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_shell = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_solve = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+rattler_virtual_packages = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+simple_spawn_blocking = { git = "https://github.com/baszalmstra/rattler", branch = "feat/global-cache-lock" }
+# pixi-rattler-patches - END
 [profile.ci]
 codegen-units = 16
 inherits = "release"
