Remove no longer needed deps from pixi_cli

--- a/crates/pixi_api/Cargo.toml
+++ b/crates/pixi_api/Cargo.toml
@@ -8,6 +8,11 @@ readme.workspace = true
 repository.workspace = true
 version = "0.1.0"
 
+[features]
+default = []
+native-tls = ["rattler_repodata_gateway/native-tls"]
+rustls-tls = ["rattler_repodata_gateway/rustls-tls"]
+
 [dependencies]
 console = { workspace = true }
 dunce = { workspace = true }
@@ -26,7 +31,10 @@ pixi_spec = { workspace = true }
 pixi_utils = { workspace = true }
 rattler_conda_types = { workspace = true }
 rattler_lock = { workspace = true }
-rattler_repodata_gateway = { workspace = true }
+rattler_repodata_gateway = { workspace = true, features = [
+  "sparse",
+  "gateway",
+] }
 regex = { workspace = true }
 same-file = { workspace = true }
 serde = { workspace = true, features = ["derive"] }
