--- a/crates/pixi_api/Cargo.toml
+++ b/crates/pixi_api/Cargo.toml
@@ -22,6 +22,7 @@ indexmap = { workspace = true }
 itertools = { workspace = true }
 miette = { workspace = true }
 minijinja = { workspace = true }
+pep508_rs = { workspace = true }
 pixi_config = { workspace = true }
 pixi_consts = { workspace = true }
 pixi_core = { workspace = true }
