Update project configuration in pytorch-conda-forge.toml
Using pixi shell on the example .toml file gives a deprecation warning. Updating on wiki.

--- a/docs/source_files/pyproject_tomls/pytorch-conda-forge.toml
+++ b/docs/source_files/pyproject_tomls/pytorch-conda-forge.toml
@@ -2,7 +2,7 @@
 [project]
 name = "pytorch-conda-forge"
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["https://prefix.dev/conda-forge"]
 platforms = ["linux-64"]
 
