--- a/docs/source_files/pyproject_tomls/pytorch-pypi-envs.toml
+++ b/docs/source_files/pyproject_tomls/pytorch-pypi-envs.toml
@@ -4,7 +4,7 @@ name = "pytorch-pypi-envs"
 # We need a python version that is compatible with pytorch
 requires-python = ">= 3.11,<3.13"
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["https://prefix.dev/conda-forge"]
 platforms = ["linux-64", "win-64"]
 
