--- a/pixi.toml
+++ b/pixi.toml
@@ -175,7 +175,7 @@ openssl = ">=3.5.4,<4"
 pkg-config = ">=0.29.2,<0.30"
 rust-src = ">=1.88.0,<2"
 
-[feature.build.target.linux-64.dependencies]
+[feature.build.target.linux.dependencies]
 clang = ">=21.1.2,<22"
 compilers = ">=1.6.0"
 make = ">=4.4.1,<5"
