fix: create separte workdir per variant

--- a/docs/source_files/pixi_workspaces/pixi_build/workspace_variants/pixi.toml
+++ b/docs/source_files/pixi_workspaces/pixi_build/workspace_variants/pixi.toml
@@ -37,8 +37,12 @@ version = "0.1.0"
 [package.build]
 backend = { name = "pixi-build-python", version = "==0.4.0" }
 
+[package.build.config]
+noarch = false
+
 [package.host-dependencies]
 hatchling = "==1.26.3"
+python = "*"
 
 [package.run-dependencies]
 cpp_math = { path = "packages/cpp_math" }
