fix: better out-of source caching and source code propagation (#4875)

--- a/crates/pixi_record/Cargo.toml
+++ b/crates/pixi_record/Cargo.toml
@@ -10,8 +10,10 @@ repository.workspace = true
 version = "0.1.0"
 
 [dependencies]
+dunce = { workspace = true }
 file_url = { workspace = true }
 miette = { workspace = true }
+pathdiff = { workspace = true }
 pixi_git = { workspace = true }
 pixi_spec = { workspace = true, features = ["rattler_lock"] }
 rattler_conda_types = { workspace = true }
@@ -24,4 +26,6 @@ typed-path = { workspace = true }
 url = { workspace = true }
 
 [dev-dependencies]
+insta = { workspace = true, features = ["yaml"] }
 serde_json = { workspace = true }
+serde_yaml = { workspace = true }
