--- a/examples/pixi-build/cpp-sdl/pixi.toml
+++ b/examples/pixi-build/cpp-sdl/pixi.toml
@@ -17,7 +17,7 @@ test = "sdl_example -h"
 
 [package]
 authors = ["Bas Zalmstra <bas@prefix.dev>"]
-description = "Showcases how to create a simple C++ executable with Pixi"
+description = "Showcases how to create a simple C++ executable with Pixi jora"
 name = "sdl_example"
 version = "0.1.0"
 
@@ -33,3 +33,8 @@ version = "0.3.*"
 [package.host-dependencies]
 # This ensures that SDL2 is available at build time.
 sdl2 = ">=2.26.5,<3.0"
+# boltons = "*"
+
+
+[package.run-dependencies]
+boltons = "*"
