fix invalid config

--- a/renovate.json5
+++ b/renovate.json5
@@ -41,7 +41,7 @@
       "description": "We want a separate PR for all rattler crates",
       "matchPackageNames": ["rattler*", "file_url", "coalesced_map", "path_resolver", "simple_spawn_blocking"],
       "matchManagers": ["cargo"],
-      "groupName": "rattler"
+      "groupName": "rattler",
       "addLabels": ["rattler"]
     },
     {
