--- a/docs/source_files/pixi_config_tomls/main_config.toml
+++ b/docs/source_files/pixi_config_tomls/main_config.toml
@@ -8,6 +8,12 @@ default-channels = ["conda-forge"]
 tls-no-verify = false
 # --8<-- [end:tls-no-verify]
 
+# --8<-- [start:native-certs]
+# Use the system's native certificates instead of bundled webpki roots.
+# This is useful in corporate environments with custom CA certificates.
+native-certs = true
+# --8<-- [end:native-certs]
+
 # --8<-- [start:authentication-override-file]
 authentication-override-file = "/path/to/your/override.json"
 # --8<-- [end:authentication-override-file]
