--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@
 format-command = "pixi run -e lint ruff format --stdin-filename {filename}"
 
 [tool.basedpyright]
-ignore = ["**/*.ipynb", "**/docs_hooks.py"]
+ignore = ["**/*.ipynb", "**/docs_hooks.py", "scripts/test_native_certs.py"]
 pythonPlatform = "All"
 pythonVersion = "3.13"
 typeCheckingMode = "all"
