--- a/docs/source_files/pixi_config_tomls/main_config.toml
+++ b/docs/source_files/pixi_config_tomls/main_config.toml
@@ -8,11 +8,15 @@ default-channels = ["conda-forge"]
 tls-no-verify = false
 # --8<-- [end:tls-no-verify]
 
-# --8<-- [start:native-certs]
-# Use the system's native certificates instead of bundled webpki roots.
-# This is useful in corporate environments with custom CA certificates.
-native-certs = true
-# --8<-- [end:native-certs]
+# --8<-- [start:tls-root-certs]
+# Which TLS root certificates to use for HTTPS connections.
+# Options: "webpki" (bundled Mozilla roots), "native" (system store), "all" (both)
+# Default is "webpki" for portability. Use "native" or "all" for corporate environments
+# with custom CA certificates.
+# Note: This setting only has an effect with rustls-tls builds (standalone pixi).
+# For native-tls builds (conda-forge), system certificates are always used.
+tls-root-certs = "native"
+# --8<-- [end:tls-root-certs]
 
 # --8<-- [start:authentication-override-file]
 authentication-override-file = "/path/to/your/override.json"
