--- a/crates/pixi_install_pypi/Cargo.toml
+++ b/crates/pixi_install_pypi/Cargo.toml
@@ -65,7 +65,7 @@ uv-types = { workspace = true }
 
 [dev-dependencies]
 assert_matches = { workspace = true }
-insta = { workspace = true, features = ["yaml", "glob", "filters"] }
+insta = { workspace = true, features = ["filters", "glob", "yaml"] }
 rstest = { workspace = true }
 serde_json = { workspace = true }
 tempfile = { workspace = true }
