--- a/pixi.toml
+++ b/pixi.toml
@@ -104,7 +104,6 @@ tbump = ">=6.9.0,<7"
 [feature.dev.tasks]
 insta-review = "cargo insta review --workspace"
 update-rattler = "cargo upgrade --incompatible allow -p rattler -p file_url -p rattler_cache -p rattler_conda_types -p rattler_digest -p rattler_lock -p rattler_networking -p rattler_repodata_gateway -p rattler_shell -p rattler_solve -p rattler_virtual_packages"
-
 # UV dependency management
 switch-to-remote-uv = { cmd = "python scripts/local_patch.py uv remote", description = "Switch back to remote uv dependencies" }
 
@@ -184,11 +183,11 @@ mold = ">=2.40.2,<3"
 [feature.build.target.win-64.dependencies]
 vs2017_win-64 = ">=19.16.27033,<20"
 
-[feature.build.activation]
-env.CARGO_TARGET_DIR = "target/pixi"
-
 [feature.build.target.unix.activation]
 scripts = ["scripts/activate.sh"]
+
+[feature.build.activation]
+env.CARGO_TARGET_DIR = "target/pixi"
 
 [feature.docs.dependencies]
 cairosvg = ">=2.8.2,<3"
@@ -250,6 +249,17 @@ description = "Build build-backends used for testing purposes"
 [feature.dist.dependencies]
 zig = ">=0.15.1,<0.16"
 
+# Feature for native-certs testing
+[feature.native-certs-test.dependencies]
+mkcert = ">=1.4.4,<2"
+pip = ">=24,<25"
+rich = ">=14,<15"
+testcontainers = ">=4,<5"
+
+[feature.native-certs-test.tasks]
+test-native-certs = { cmd = "python scripts/test_native_certs.py --pixi-bin $CARGO_TARGET_DIR/release/pixi", description = "Test native-certs feature with local HTTPS PyPI server", depends-on = [
+  "build-release",
+] }
 
 #
 # Environment descriptions
@@ -282,4 +292,5 @@ schema = { features = [
   "pytest",
 ], no-default-feature = true, solve-group = "default" }
 test-export = { features = ["micromamba"], no-default-feature = true }
+test-native-certs = { features = ["native-certs-test", "build"] }
 trampoline = { features = ["trampoline"], no-default-feature = true }
