--- a/crates/pixi_test_utils/Cargo.toml
+++ b/crates/pixi_test_utils/Cargo.toml
@@ -9,5 +9,13 @@ repository.workspace = true
 version = "0.1.0"
 
 [dependencies]
+chrono = { workspace = true }
+fs-err = { workspace = true }
 itertools = { workspace = true }
 miette = { workspace = true, features = ["fancy-no-backtrace"] }
+rattler_conda_types = { workspace = true }
+rattler_digest = { workspace = true }
+serde_json = { workspace = true }
+tempfile = { workspace = true }
+tokio = { workspace = true, features = ["fs"] }
+url = { workspace = true }
