--- a/crates/pixi_utils/Cargo.toml
+++ b/crates/pixi_utils/Cargo.toml
@@ -12,14 +12,16 @@ version = "0.1.0"
 [features]
 default = ["rustls-tls"]
 native-tls = [
+  "pixi_auth/native-tls",
+  "rattler_networking/native-tls",
   "reqwest/native-tls",
   "reqwest/native-tls-alpn",
-  "rattler_networking/native-tls",
 ]
 rustls-tls = [
+  "pixi_auth/rustls-tls",
+  "rattler_networking/rustls-tls",
   "reqwest/rustls-tls",
   "reqwest/rustls-tls-native-roots",
-  "rattler_networking/rustls-tls",
 ]
 
 
@@ -31,6 +33,7 @@ is_executable = { workspace = true }
 itertools = { workspace = true }
 miette = { workspace = true }
 pep508_rs = { workspace = true }
+pixi_auth = { workspace = true }
 pixi_config = { workspace = true }
 pixi_consts = { workspace = true }
 pixi_variant = { workspace = true }
