--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ pin-project-lite = "0.2.16"
 pixi = { path = "crates/pixi" }
 pixi_allocator = { path = "crates/pixi_allocator" }
 pixi_api = { path = "crates/pixi_api" }
+pixi_auth = { path = "crates/pixi_auth", default-features = false }
 pixi_build_backend_passthrough = { path = "crates/pixi_build_backend_passthrough" }
 pixi_build_discovery = { path = "crates/pixi_build_discovery" }
 pixi_build_frontend = { path = "crates/pixi_build_frontend" }
@@ -134,6 +135,9 @@ rattler_package_streaming = { version = "0.23.14", default-features = false }
 rattler_repodata_gateway = { version = "0.25.0", default-features = false }
 rattler_shell = { version = "0.25.8", default-features = false }
 rattler_solve = { version = "4.1.0", default-features = false }
+rattler_upload = { version = "0.4.5", default-features = false, features = [
+  "s3",
+] }
 rattler_virtual_packages = { version = "2.3.0", default-features = false }
 rayon = "1.10.0"
 regex = "1.11.1"
