use namespace runners

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,7 @@ jobs:
     timeout-minutes: 15
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main' }}
-    runs-on: 8core_ubuntu_latest_runner
+    runs-on: namespace-profile-ubuntu-24-04-x86-64-4
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
       - uses: prefix-dev/setup-pixi@main
@@ -198,7 +198,7 @@ jobs:
     timeout-minutes: 15
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main' }}
-    runs-on: macos-15
+    runs-on: namespace-profile-macos-15-arm64-6
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
       - uses: prefix-dev/setup-pixi@main
@@ -220,7 +220,7 @@ jobs:
     timeout-minutes: 30
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' && github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'test:extra_slow')}} # Only run on the main branch
-    runs-on: macos-15-intel
+    runs-on: namespace-profile-macos-15-arm64-6
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
       - uses: prefix-dev/setup-pixi@main
@@ -270,7 +270,7 @@ jobs:
   build-binary-linux-x86_64:
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main' }}
-    runs-on: 8core_ubuntu_latest_runner
+    runs-on: namespace-profile-ubuntu-24-04-x86-64-4
     name: "build binary | linux x86_64"
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
@@ -299,7 +299,7 @@ jobs:
   build-binary-macos-aarch64:
     needs: determine_changes
     if: ${{ needs.determine_changes.outputs.code == 'true' || github.ref == 'refs/heads/main' }}
-    runs-on: macos-15
+    runs-on: namespace-profile-macos-15-arm64-6
     name: "build binary | macos aarch64"
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6
@@ -441,7 +441,7 @@ jobs:
   test-pytest-macos-aarch64:
     timeout-minutes: 10
     name: Pytest | macos aarch64
-    runs-on: macos-15
+    runs-on: namespace-profile-macos-15-arm64-6
     needs: build-binary-macos-aarch64
     env:
       TARGET_RELEASE: "${{ github.workspace }}/target/pixi/release"
@@ -465,7 +465,7 @@ jobs:
   test-pytest-linux-x86_64:
     timeout-minutes: 10
     name: Pytest | linux x86_64
-    runs-on: 8core_ubuntu_latest_runner
+    runs-on: namespace-profile-ubuntu-24-04-x86-64-4
     needs: build-binary-linux-x86_64
     env:
       TARGET_RELEASE: "${{ github.workspace }}/target/pixi/release"
@@ -524,7 +524,7 @@ jobs:
   test-integration-macos-aarch64:
     timeout-minutes: 30
     name: Integration tests | macos aarch64
-    runs-on: macos-15
+    runs-on: namespace-profile-macos-15-arm64-6
     needs: build-binary-macos-aarch64
     if: ${{ github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'test:extra_slow') }}
     env:
@@ -558,7 +558,7 @@ jobs:
   test-integration-linux-x86_64:
     timeout-minutes: 30
     name: Integration tests | linux x86_64
-    runs-on: 8core_ubuntu_latest_runner
+    runs-on: namespace-profile-ubuntu-24-04-x86-64-4
     needs: build-binary-linux-x86_64
     if: ${{ github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'test:extra_slow') }}
     env:
@@ -698,7 +698,7 @@ jobs:
   test-downstream-linux-x86_64:
     timeout-minutes: 15
     name: Downstream tests | linux x86_64
-    runs-on: 8core_ubuntu_latest_runner
+    runs-on: namespace-profile-ubuntu-24-04-x86-64-4
     needs: build-binary-linux-x86_64
     if: ${{ github.ref == 'refs/heads/main' || contains(github.event.pull_request.labels.*.name, 'test:extra_slow') }}
     env:
@@ -764,7 +764,7 @@ jobs:
     with:
       sha: ${{ github.sha }}
       arch: linux-x86_64
-      runs-on: 8core_ubuntu_latest_runner
+      runs-on: ubuntu-latest
 
   test-common-wheels-windows-x86_64:
     name: Wheel Tests | windows x86_64
