--- a/crates/pixi_core/Cargo.toml
+++ b/crates/pixi_core/Cargo.toml
@@ -101,6 +101,9 @@ uv-types = { workspace = true }
 uv-workspace = { workspace = true }
 xxhash-rust = { workspace = true }
 
+[target.'cfg(unix)'.dependencies]
+libc = { workspace = true }
+
 [dev-dependencies]
 insta = { workspace = true, features = ["yaml", "glob", "filters"] }
 pixi_test_utils = { workspace = true }
