fix lint and build for musl

--- a/.github/actionlint.yml
+++ b/.github/actionlint.yml
@@ -4,6 +4,7 @@ self-hosted-runner:
     - 16core_windows_latest_runner
     - windows_arm64_2025_large
     - windows_x64_2025_large
+    - namespace-profile-*
 
 paths:
   .github/workflows/release.yml:
