--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -108,7 +108,7 @@ jobs:
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
       - run: |
-          RUSTDOCFLAGS="-Dwarnings -Wrustdoc::unreachable_pub" cargo doc --workspace --all-features --no-deps
+          RUSTDOCFLAGS="-Dwarnings -Wunreachable-pub" cargo doc --workspace --all-features --no-deps
 
   # Checks for dependencies that are not used in the codebase
   cargo-machete:
