--- a/pixi.toml
+++ b/pixi.toml
@@ -130,6 +130,7 @@ cmd = "pytest --inline-snapshot=fix -k '{{ expression }}'"
 actionlint = ">=1.7.7,<2"
 basedpyright = ">=1.31.6,<2"
 cargo-deny = ">=0.18,<0.18.8" # 0.18.5 breaks license checking for uv crates
+cargo-shear = ">=1.7.1,<2"
 dprint = ">=0.49.1,<0.51"
 go-shfmt = ">=3.12.0,<4"
 lefthook = ">=1.13.6,<2"
@@ -143,6 +144,7 @@ actionlint = { cmd = "actionlint", env = { SHELLCHECK_OPTS = "-e SC2086" } }
 cargo-clippy = "cargo clippy --all-targets --workspace -- -D warnings"
 cargo-deny = "cargo deny --workspace check license --deny warnings"
 cargo-fmt = "cargo fmt --all"
+cargo-shear = "cargo shear --fix"
 check-openssl = "python tests/scripts/check-openssl.py"
 dprint-check = { cmd = "dprint check --log-level=silent", description = "Check formatting with dprint" }
 dprint-fmt = { cmd = "dprint fmt --incremental=false", description = "Format with dprint" }
