--- a/crates/pixi/Cargo.toml
+++ b/crates/pixi/Cargo.toml
@@ -41,7 +41,6 @@ http = { workspace = true }
 indexmap = { workspace = true }
 indicatif = { workspace = true }
 insta = { workspace = true, features = ["yaml", "glob", "filters"] }
-itertools = { workspace = true }
 pep508_rs = { workspace = true }
 pixi_build_backend_passthrough = { workspace = true }
 pixi_build_frontend = { workspace = true }
@@ -55,14 +54,13 @@ pixi_record = { workspace = true }
 pixi_spec = { workspace = true }
 pixi_task = { workspace = true }
 pixi_utils = { workspace = true }
+pixi_test_utils = { workspace = true }
 pypi_mapping = { workspace = true }
 rattler_conda_types = { workspace = true }
-rattler_digest = { workspace = true }
 rattler_lock = { workspace = true }
 rattler_virtual_packages = { workspace = true }
 reqwest = { workspace = true }
 reqwest-middleware = { workspace = true }
-serde_json = { workspace = true }
 temp-env = { workspace = true }
 tempfile = { workspace = true }
 thiserror = { workspace = true }
