--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -136,3 +136,7 @@ jobs:
           # Check diff before committing
           git diff-index --quiet HEAD || git commit -m "Update install scripts from main"
           git push origin gh-pages
+
+      - name: Checkout main branch
+        # Important to run the post setup-pixi steps
+        run: git checkout main
