--- a/Cargo.toml
+++ b/Cargo.toml
@@ -174,7 +174,7 @@ tokio-util = "0.7.13"
 toml-span = "0.6.0"
 toml_edit = "0.23.0"
 tracing = "0.1.41"
-xz2 = "0.1.7"
+lzma-rust2 = { version = "0.15", default-features = false, features = ["xz", "std"] }
 # Forcing the version due to this PR https://github.com/tokio-rs/tracing/pull/3368
 tracing-subscriber = "=0.3.19"
 typed-path = "0.11.0"
