Apply suggestion from @baszalmstra
Co-authored-by: Bas Zalmstra <4995967+baszalmstra@users.noreply.github.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -138,5 +138,5 @@ jobs:
           git push origin gh-pages
 
       - name: Checkout main branch
-        # Important to run the post setup-pixi steps
+        # Important to run the post setup-pixi steps, we want to cache based on the `main` branch and we checked out another in the step above.
         run: git checkout main
