--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,7 @@ digest = "0.10"
 dirs = "6.0.0"
 dunce = "1.0.5"
 fancy_display = { path = "crates/fancy_display" }
-file_url = "0.2.6"
+file_url = "0.2.7"
 flate2 = "1.1.0"
 fs-err = { version = "3.1.0" }
 fs_extra = "1.3.0"
@@ -115,29 +115,30 @@ pypi_mapping = { path = "crates/pypi_mapping" }
 pypi_modifiers = { path = "crates/pypi_modifiers" }
 pyproject-toml = "0.13.7"
 rand = { version = "0.9.1", default-features = false }
-rattler = { version = "0.39.0", default-features = false }
-rattler_cache = { version = "0.6.2", default-features = false }
-rattler_conda_types = { version = "0.42.0", default-features = false, features = [
+rattler = { version = "0.39.6", default-features = false }
+rattler_cache = { version = "0.6.5", default-features = false }
+rattler_conda_types = { version = "0.42.3", default-features = false, features = [
   "rayon",
 ] }
-rattler_digest = { version = "1.2.0", default-features = false }
-rattler_lock = { version = "0.26.7", default-features = false }
+rattler_digest = { version = "1.2.1", default-features = false }
+rattler_lock = { version = "0.26.8", default-features = false }
 rattler_menuinst = { version = "0.2.35", default-features = false }
-rattler_networking = { version = "0.25.22", default-features = false, features = [
+rattler_networking = { version = "0.25.28", default-features = false, features = [
   "dirs",
   "google-cloud-auth",
 ] }
 rattler_package_streaming = { version = "0.23.14", default-features = false }
-rattler_repodata_gateway = { version = "0.25.0", default-features = false }
-rattler_shell = { version = "0.25.8", default-features = false }
-rattler_solve = { version = "4.1.0", default-features = false }
+rattler_repodata_gateway = { version = "0.25.6", default-features = false }
+rattler_shell = { version = "0.25.14", default-features = false }
+rattler_solve = { version = "4.1.1", default-features = false }
 rattler_upload = { version = "0.4.5", default-features = false, features = [
   "s3",
 ] }
-rattler_virtual_packages = { version = "2.3.0", default-features = false }
+rattler_virtual_packages = { version = "2.3.3", default-features = false }
 rayon = "1.10.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.12", default-features = false }
+retry-policies = "0.4"
 # reqwest-middleware = "0.4"
 # reqwest-retry = "0.7.0"
 bzip2 = "0.6.1"
@@ -177,7 +178,7 @@ tracing = "0.1.41"
 xz2 = "0.1.7"
 # Forcing the version due to this PR https://github.com/tokio-rs/tracing/pull/3368
 tracing-subscriber = "=0.3.19"
-typed-path = "0.11.0"
+typed-path = "0.12.0"
 # Bumping this to a higher version breaks the Windows path handling.
 url = "2.5.4"
 uv-auth = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
