--- a/Cargo.toml
+++ b/Cargo.toml
@@ -138,6 +138,7 @@ rattler_virtual_packages = { version = "2.3.0", default-features = false }
 rayon = "1.10.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.12", default-features = false }
+retry-policies = "0.4"
 # reqwest-middleware = "0.4"
 # reqwest-retry = "0.7.0"
 bzip2 = "0.6.1"
@@ -177,7 +178,7 @@ tracing = "0.1.41"
 xz2 = "0.1.7"
 # Forcing the version due to this PR https://github.com/tokio-rs/tracing/pull/3368
 tracing-subscriber = "=0.3.19"
-typed-path = "0.11.0"
+typed-path = "0.12.0"
 # Bumping this to a higher version breaks the Windows path handling.
 url = "2.5.4"
 uv-auth = { git = "https://github.com/astral-sh/uv", tag = "0.9.5" }
