fix: satisfiability issues

--- a/tests/data/non-satisfiability/binary-spec-source-record/pixi.toml
+++ b/tests/data/non-satisfiability/binary-spec-source-record/pixi.toml
@@ -1,6 +1,6 @@
 [project]
 channels = ["conda-forge"]
-name = "binary-spec-source-record"
+name = "source"
 platforms = ["win-64"]
 preview = ["pixi-build"]
 
