--- a/tests/data/satisfiability/out-of-tree-source-parent/package/pixi.toml
+++ b/tests/data/satisfiability/out-of-tree-source-parent/package/pixi.toml
@@ -3,6 +3,6 @@ name = "out-of-tree-package"
 version = "0.1.0"
 
 [package.build]
-backend = { name = "pixi-build-cmake", version = "0.3.*" }
+backend = { name = "in-memory", version = "*" }
 # Point to source files in a different directory (out-of-tree build)
 source = { path = "../" }
