--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: "Pixi by prefix.dev"
+site_name: "Pixi"
 site_url: https://prefix-dev.github.io/pixi
 site_description: Pixi Documentation — Next-gen package manager for reproducible development setups
 
@@ -6,7 +6,7 @@ theme:
   name: material
   custom_dir: docs/overrides
   favicon: assets/pixi.png
-  logo: assets/pixi.png
+  logo: assets/pixi-logo.svg
   font:
     text: Red Hat Text
     code: JetBrains Mono
